fix size and alignment of ordered list numerations

--- a/src/css/doc.css
+++ b/src/css/doc.css
@@ -311,11 +311,12 @@
 
 .doc ol > li::before {
   font-weight: 500;
+  font-size: 0.95em;
   display: inline-block;
   width: 1em;
   direction: rtl;
-  /* NOTE the browser using -1.25em as left offset */
-  margin: -1.25px 0.5em 0 -1.5em;
+  /* NOTE the browser uses -1.25em as left offset */
+  margin: -0.025em 0.5em 0 -1.5em;
   text-align: right;
   position: absolute;
 }
